adding module name to url
