# userservices/docs/swagger.yaml
@@ -66,7 +66,7 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
-  /api/v1/users:
+  /user/api/v1/users:
     get:
       consumes:
       - application/json
@@ -167,7 +167,7 @@ paths:
       summary: Update a user
       tags:
       - Users
-  /api/v1/users/{id}:
+  /user/api/v1/users/{id}:
     get:
       consumes:
       - application/json
@@ -200,7 +200,7 @@ paths:
       summary: Show a user
       tags:
       - Users
-  /api/v1/users/test:
+  /user/api/v1/users/test:
     get:
       consumes:
       - application/json
